# cse-207-project-portal

./: .gitignore  CMakeLists.txt  Makefile
src/: main.c
src/admin/: admin.c
src/core/: admin.c  admin_menu.c  faculty.c  faculty_menu.c  student.c  student_menu.c
src/faculty/: faculty.c  faculty.h
src/headers/: admin.h  admin_menu.h  faculty.h  faculty_menu.h  student.h  student_menu.h
src/student/: student.c  student.h
